--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -6,12 +6,14 @@
   color: #000;
   font-size: 3rem;
   text-decoration: none;
+  margin-bottom: 1.3rem;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 .nav-list {
   display: flex;
   list-style-type: none;
-  margin: 0;
+  margin: 1.3rem 0 0 0;
 }
 
 .nav-item {
