--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -48,9 +48,16 @@ a {
   background-color: transparent;
   -webkit-text-decoration-skip: objects;
 }
+h1:visited {
+  color: #272727;
+}
 a:active,
 a:hover {
   outline-width: 0;
+}
+a:visited {
+  color:#FF652F;
+
 }
 abbr[title] {
   border-bottom: none;
@@ -238,6 +245,7 @@ h1 {
   text-rendering: optimizeLegibility;
   font-size: 2.25rem;
   line-height: 1.1;
+  color: #272727;
 }
 h2 {
   margin-left: 0;
