--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -1,13 +1,15 @@
 .header {
   padding: 1rem 0 3rem;
 }
+h1 {
+  font-family: 'Tinue Road', monospace;
+  text-decoration: none;
+}
 
 .title {
   color: #000;
   font-size: 3rem;
-  text-decoration: none;
   margin-bottom: 1.3rem;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 .nav-list {
