--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,7 +5,7 @@
 html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
-  font-family: Anonymous-Pro;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 video {
