--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,13 +7,14 @@ html {
   -webkit-text-size-adjust: 100%;
   font-family: Arial, Helvetica, sans-serif;
 }
+	body {	
+	  margin: 0;	
+	  -webkit-font-smoothing: antialiased;	
+	  -moz-osx-font-smoothing: grayscale;	
+	}
 
-video {
-  display: inline-block;
-}
-audio:not([controls]) {
-  display: none;
-  height: 0;
+footer, header, nav, figure, menu {
+  display: block;
 }
 
 a {
@@ -39,7 +40,17 @@ strong {
   font-weight: inherit;
   font-weight: bolder;
 }
-
+	dfn {	
+	  font-style: italic;	
+	}	
+	h1 {	
+	  font-size: 2em;	
+	  margin: 0.67em 0;	
+	}	
+	mark {	
+	  background-color: #ff0;	
+	  color: #000;	
+	}
 small {
   font-size: 80%;
 }
@@ -147,6 +158,163 @@ textarea {
 [type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
+	::-webkit-input-placeholder {	
+	  color: inherit;	
+	  opacity: 0.54;	
+	}	
+	::-webkit-file-upload-button {	
+	  -webkit-appearance: button;	
+	  font: inherit;	
+	}	
+	html {	
+	  font: 112.5%/1.45em georgia, serif;	
+	  box-sizing: border-box;	
+	  overflow-y: scroll;	
+	}	
+	* {	
+	  box-sizing: inherit;	
+	}	
+	*:before {	
+	  box-sizing: inherit;	
+	}	
+	*:after {	
+	  box-sizing: inherit;	
+	}	
+	body {	
+	  color: hsla(0, 0%, 0%, 0.8);	
+	  font-family: sans-serif;	
+	  font-weight: normal;	
+	  word-wrap: break-word;	
+	  font-kerning: normal;	
+	  -moz-font-feature-settings: "kern", "liga", "clig", "calt";	
+	  -ms-font-feature-settings: "kern", "liga", "clig", "calt";	
+	  -webkit-font-feature-settings: "kern", "liga", "clig", "calt";	
+	  font-feature-settings: "kern", "liga", "clig", "calt";	
+	}	
+	img {	
+	  max-width: 100%;	
+	  margin-left: 0;	
+	  margin-right: 0;	
+	  margin-top: 0;	
+	  padding-bottom: 0;	
+	  padding-left: 0;	
+	  padding-right: 0;	
+	  padding-top: 0;	
+	  margin-bottom: 1.45rem;	
+	}	
+	h1 {	
+	  margin-left: 0;	
+	  margin-right: 0;	
+	  margin-top: 0;	
+	  padding-bottom: 0;	
+	  padding-left: 0;	
+	  padding-right: 0;	
+	  padding-top: 0;	
+	  margin-bottom: 1.45rem;	
+	  color: inherit;	
+	  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,	
+	    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;	
+	  font-weight: bold;	
+	  text-rendering: optimizeLegibility;	
+	  font-size: 2.25rem;	
+	  line-height: 1.1;	
+	}	
+	h2 {	
+	  margin-left: 0;	
+	  margin-right: 0;	
+	  margin-top: 0;	
+	  padding-bottom: 0;	
+	  padding-left: 0;	
+	  padding-right: 0;	
+	  padding-top: 0;	
+	  margin-bottom: 1.45rem;	
+	  color: inherit;	
+	  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,	
+	    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;	
+	  font-weight: bold;	
+	  text-rendering: optimizeLegibility;	
+	  font-size: 1.62671rem;	
+	  line-height: 1.1;	
+	}	
+	h3 {	
+	  margin-left: 0;	
+	  margin-right: 0;	
+	  margin-top: 0;	
+	  padding-bottom: 0;	
+	  padding-left: 0;	
+	  padding-right: 0;	
+	  padding-top: 0;	
+	  margin-bottom: 1.45rem;	
+	  color: inherit;	
+	  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,	
+	    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;	
+	  font-weight: bold;	
+	  text-rendering: optimizeLegibility;	
+	  font-size: 1.38316rem;	
+	  line-height: 1.1;	
+	}	
+	h4 {	
+	  margin-left: 0;	
+	  margin-right: 0;	
+	  margin-top: 0;	
+	  padding-bottom: 0;	
+	  padding-left: 0;	
+	  padding-right: 0;	
+	  padding-top: 0;	
+	  margin-bottom: 1.45rem;	
+	  color: inherit;	
+	  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,	
+	    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;	
+	  font-weight: bold;	
+	  text-rendering: optimizeLegibility;	
+	  font-size: 1rem;	
+	  line-height: 1.1;	
+	}	
+	h5 {	
+	  margin-left: 0;	
+	  margin-right: 0;	
+	  margin-top: 0;	
+	  padding-bottom: 0;	
+	  padding-left: 0;	
+	  padding-right: 0;	
+	  padding-top: 0;	
+	  margin-bottom: 1.45rem;	
+	  color: inherit;	
+	  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,	
+	    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;	
+	  font-weight: bold;	
+	  text-rendering: optimizeLegibility;	
+	  font-size: 0.85028rem;	
+	  line-height: 1.1;	
+	}	
+	h6 {	
+	  margin-left: 0;	
+	  margin-right: 0;	
+	  margin-top: 0;	
+	  padding-bottom: 0;	
+	  padding-left: 0;	
+	  padding-right: 0;	
+	  padding-top: 0;	
+	  margin-bottom: 1.45rem;	
+	  color: inherit;	
+	  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,	
+	    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;	
+	  font-weight: bold;	
+	  text-rendering: optimizeLegibility;	
+	  font-size: 0.78405rem;	
+	  line-height: 1.1;	
+	}	
+	hgroup {	
+	  margin-left: 0;	
+	  margin-right: 0;	
+	  margin-top: 0;	
+	  padding-bottom: 0;	
+	  padding-left: 0;	
+	  padding-right: 0;	
+	  padding-top: 0;	
+	  margin-bottom: 1.45rem;	
+	}
+
 ul {
   margin-left: 1.45rem;
   margin-right: 0;
@@ -192,6 +360,16 @@ dd {
   padding-top: 0;
   margin-bottom: 1.45rem;
 }
+	p {	
+	  margin-left: 0;	
+	  margin-right: 0;	
+	  margin-top: 0;	
+	  padding-bottom: 0;	
+	  padding-left: 0;	
+	  padding-right: 0;	
+	  padding-top: 0;	
+	  margin-bottom: 1.45rem;	
+	}
 
 figure {
   margin-left: 0;
