--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,15 +2,18 @@
 //npm install gatsby-plugin-sass node-sass
 /* Reset provided by https://github.com/gatsbyjs/gatsby-starter-blog via MIT license */
 
+@import '../fonts/fonts.css';
+
 html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Anonymous-Pro', monospace;
 }
 	body {	
 	  margin: 0;	
 	  -webkit-font-smoothing: antialiased;	
-	  -moz-osx-font-smoothing: grayscale;	
+    -moz-osx-font-smoothing: grayscale;	
+    font-family: 'Anonymous-Pro', monospace;
 	}
 
 footer, header, nav, figure, menu {
@@ -166,11 +169,7 @@ textarea {
 	  -webkit-appearance: button;	
 	  font: inherit;	
 	}	
-	html {	
-	  font: 112.5%/1.45em georgia, serif;	
-	  box-sizing: border-box;	
-	  overflow-y: scroll;	
-	}	
+
 	* {	
 	  box-sizing: inherit;	
 	}	
@@ -180,17 +179,7 @@ textarea {
 	*:after {	
 	  box-sizing: inherit;	
 	}	
-	body {	
-	  color: hsla(0, 0%, 0%, 0.8);	
-	  font-family: sans-serif;	
-	  font-weight: normal;	
-	  word-wrap: break-word;	
-	  font-kerning: normal;	
-	  -moz-font-feature-settings: "kern", "liga", "clig", "calt";	
-	  -ms-font-feature-settings: "kern", "liga", "clig", "calt";	
-	  -webkit-font-feature-settings: "kern", "liga", "clig", "calt";	
-	  font-feature-settings: "kern", "liga", "clig", "calt";	
-	}	
+
 	img {	
 	  max-width: 100%;	
 	  margin-left: 0;	
@@ -202,119 +191,7 @@ textarea {
 	  padding-top: 0;	
 	  margin-bottom: 1.45rem;	
 	}	
-	h1 {	
-	  margin-left: 0;	
-	  margin-right: 0;	
-	  margin-top: 0;	
-	  padding-bottom: 0;	
-	  padding-left: 0;	
-	  padding-right: 0;	
-	  padding-top: 0;	
-	  margin-bottom: 1.45rem;	
-	  color: inherit;	
-	  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,	
-	    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;	
-	  font-weight: bold;	
-	  text-rendering: optimizeLegibility;	
-	  font-size: 2.25rem;	
-	  line-height: 1.1;	
-	}	
-	h2 {	
-	  margin-left: 0;	
-	  margin-right: 0;	
-	  margin-top: 0;	
-	  padding-bottom: 0;	
-	  padding-left: 0;	
-	  padding-right: 0;	
-	  padding-top: 0;	
-	  margin-bottom: 1.45rem;	
-	  color: inherit;	
-	  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,	
-	    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;	
-	  font-weight: bold;	
-	  text-rendering: optimizeLegibility;	
-	  font-size: 1.62671rem;	
-	  line-height: 1.1;	
-	}	
-	h3 {	
-	  margin-left: 0;	
-	  margin-right: 0;	
-	  margin-top: 0;	
-	  padding-bottom: 0;	
-	  padding-left: 0;	
-	  padding-right: 0;	
-	  padding-top: 0;	
-	  margin-bottom: 1.45rem;	
-	  color: inherit;	
-	  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,	
-	    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;	
-	  font-weight: bold;	
-	  text-rendering: optimizeLegibility;	
-	  font-size: 1.38316rem;	
-	  line-height: 1.1;	
-	}	
-	h4 {	
-	  margin-left: 0;	
-	  margin-right: 0;	
-	  margin-top: 0;	
-	  padding-bottom: 0;	
-	  padding-left: 0;	
-	  padding-right: 0;	
-	  padding-top: 0;	
-	  margin-bottom: 1.45rem;	
-	  color: inherit;	
-	  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,	
-	    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;	
-	  font-weight: bold;	
-	  text-rendering: optimizeLegibility;	
-	  font-size: 1rem;	
-	  line-height: 1.1;	
-	}	
-	h5 {	
-	  margin-left: 0;	
-	  margin-right: 0;	
-	  margin-top: 0;	
-	  padding-bottom: 0;	
-	  padding-left: 0;	
-	  padding-right: 0;	
-	  padding-top: 0;	
-	  margin-bottom: 1.45rem;	
-	  color: inherit;	
-	  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,	
-	    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;	
-	  font-weight: bold;	
-	  text-rendering: optimizeLegibility;	
-	  font-size: 0.85028rem;	
-	  line-height: 1.1;	
-	}	
-	h6 {	
-	  margin-left: 0;	
-	  margin-right: 0;	
-	  margin-top: 0;	
-	  padding-bottom: 0;	
-	  padding-left: 0;	
-	  padding-right: 0;	
-	  padding-top: 0;	
-	  margin-bottom: 1.45rem;	
-	  color: inherit;	
-	  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,	
-	    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;	
-	  font-weight: bold;	
-	  text-rendering: optimizeLegibility;	
-	  font-size: 0.78405rem;	
-	  line-height: 1.1;	
-	}	
-	hgroup {	
-	  margin-left: 0;	
-	  margin-right: 0;	
-	  margin-top: 0;	
-	  padding-bottom: 0;	
-	  padding-left: 0;	
-	  padding-right: 0;	
-	  padding-top: 0;	
-	  margin-bottom: 1.45rem;	
-	}
-
+	
 ul {
   margin-left: 1.45rem;
   margin-right: 0;
@@ -360,85 +237,9 @@ dd {
   padding-top: 0;
   margin-bottom: 1.45rem;
 }
-	p {	
-	  margin-left: 0;	
-	  margin-right: 0;	
-	  margin-top: 0;	
-	  padding-bottom: 0;	
-	  padding-left: 0;	
-	  padding-right: 0;	
-	  padding-top: 0;	
-	  margin-bottom: 1.45rem;	
-	}
+
 
 figure {
-  margin-left: 0;
-  margin-right: 0;
-  margin-top: 0;
-  padding-bottom: 0;
-  padding-left: 0;
-  padding-right: 0;
-  padding-top: 0;
-  margin-bottom: 1.45rem;
-}
-pre {
-  margin-left: 0;
-  margin-right: 0;
-  margin-top: 0;
-  margin-bottom: 1.45rem;
-  font-size: 0.85rem;
-  line-height: 1.42;
-  background: hsla(0, 0%, 0%, 0.04);
-  border-radius: 3px;
-  overflow: auto;
-  word-wrap: normal;
-  padding: 1.45rem;
-}
-table {
-  margin-left: 0;
-  margin-right: 0;
-  margin-top: 0;
-  padding-bottom: 0;
-  padding-left: 0;
-  padding-right: 0;
-  padding-top: 0;
-  margin-bottom: 1.45rem;
-  font-size: 1rem;
-  line-height: 1.45rem;
-  border-collapse: collapse;
-  width: 100%;
-}
-fieldset {
-  margin-left: 0;
-  margin-right: 0;
-  margin-top: 0;
-  padding-bottom: 0;
-  padding-left: 0;
-  padding-right: 0;
-  padding-top: 0;
-  margin-bottom: 1.45rem;
-}
-blockquote {
-  margin-left: 1.45rem;
-  margin-right: 1.45rem;
-  margin-top: 0;
-  padding-bottom: 0;
-  padding-left: 0;
-  padding-right: 0;
-  padding-top: 0;
-  margin-bottom: 1.45rem;
-}
-form {
-  margin-left: 0;
-  margin-right: 0;
-  margin-top: 0;
-  padding-bottom: 0;
-  padding-left: 0;
-  padding-right: 0;
-  padding-top: 0;
-  margin-bottom: 1.45rem;
-}
-noscript {
   margin-left: 0;
   margin-right: 0;
   margin-top: 0;
