--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -1,5 +1,5 @@
 .header {
- padding: 1rem 0 3rem;
+// padding: 1rem 0 3rem;
 }
 
 
@@ -21,7 +21,7 @@
   display: flex;
   justify-content: flext-start;
   list-style-type: none;
-
+  margin-left: 0;
   
 }
 
