--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -1,16 +1,17 @@
 .header {
-// padding: 1rem 0 3rem;
+  margin-top: 1.3rem;
+  font-weight: bold;
+  margin-left: 0;
 }
 
 
 .title {
-  
-  font-size: 3rem;
   margin-bottom: 1.3rem;
   text-decoration: none;
-  font-size: 1.2em;
+  font-size:2.8em;
   margin: 0.67em 0;
   color: #898912;
+  font-family: Major-Mono-Display, monospace;
 
 }
 .title:visited {
@@ -19,9 +20,11 @@
 
 .nav-list {
   display: flex;
-  justify-content: flext-start;
+  justify-content: flex-start;
   list-style-type: none;
-  margin-left: 0;
+  font-weight: normal;
+  margin-left: auto;
+  font-size: 1.2em;
   
 }
 
@@ -29,7 +32,6 @@
   color: #999;
   margin-right: 1.3rem;
   text-decoration: none;
-
   &:hover {
     color: #666;
   }
