--- a/src/pages/recipe.module.scss
+++ b/src/pages/recipe.module.scss
@@ -1,29 +1,20 @@
 .recipeList {
   list-style-type: none;
-  margin: 0;
-  
 }
 
 .recipe {  
   a {
     border-radius: 10px;
-    background: #9e9e15;
+    background: #999966;
     color: #000000;
     text-decoration: none;
     display: block;
-    padding: 0 15px 15px 15px;
-    margin: 1rem 0;
+    padding: 2px 15px 15px 15px;
     }
   
   a:hover {
     background-color: #e4e4e4;
   }
-
-
-
-  h2 {
-    margin-bottom: 0;
-    }
 
   p {
     color: #000;
@@ -34,8 +25,6 @@
     padding: 8px 8px 8px 8px;
     border-radius: 10px;
     margin-right: 10px;
-    font-size: .9rem;
-    font-weight: bold;
     
   }
   .categoryContainer {
