pumpkin soup colours

--- a/src/pages/recipe.module.scss
+++ b/src/pages/recipe.module.scss
@@ -5,15 +5,14 @@
 .recipe {  
   a {
     border-radius: 10px;
-    background: #999966;
-    color: #000000;
+    background: #e4e4e4;
     text-decoration: none;
     display: block;
     padding: 2px 15px 15px 15px;
     }
   
   a:hover {
-    background-color: #e4e4e4;
+    background-color: #DFD4CC;
   }
 
   p {
@@ -21,7 +20,7 @@
   }
   .category span{
     color: #272727;
-    background-color: #e4e4e4;
+    background-color: #F49600;
     padding: 8px 8px 8px 8px;
     border-radius: 10px;
     margin-right: 10px;
