--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -10,12 +10,12 @@
   text-decoration: none;
   font-size:2.8em;
   margin: 0.67em 0;
-  color: #898912;
+  color: #331714;
   font-family: Major-Mono-Display, monospace;
 
 }
 .title:visited {
-  color:  #898912;
+  color:  #331714;
 }
 
 .nav-list {
@@ -29,13 +29,18 @@
 }
 
 .nav-item {
-  color: #999;
+  color: #F49600;
   margin-right: 1.3rem;
   text-decoration: none;
-  &:hover {
-    color: #666;
+  font-weight: bold;
+ 
+  &:visited {
+    color: #F49600;
   }
   
+}
+.nav-item:hover {
+  color: #331714;
 }
 
 .active-nav-item {
