sorted ma list and fixed the fonts ziese

--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -10,12 +10,12 @@
   text-decoration: none;
   font-size:2.8em;
   margin: 0.67em 0;
-  color: #331714;
+  color: #613F73;
   font-family: Major-Mono-Display, monospace;
 
 }
 .title:visited {
-  color:  #331714;
+  color:  #613F73;
 }
 
 .nav-list {
