--- a/src/templates/template.module.scss
+++ b/src/templates/template.module.scss
@@ -8,6 +8,7 @@
     }
     .categoryContainer {
       display: flex;
+      flex-direction: row;
       justify-content: flex-start;
     }
     .metaContainer {
