--- a/src/templates/template.module.scss
+++ b/src/templates/template.module.scss
@@ -1,15 +1,11 @@
 
-    .category span{
-      background-color: #272727;
-      color: #e4e4e4;
-      padding: 8px 8px 8px 8px;
-      border-radius: 5px;
-      
-    }
+
     .categoryContainer {
       display: flex;
       flex-direction: row;
-      justify-content: flex-start;
+      align-items: flex-start;
+      flex-wrap: wrap;
+      
     }
     .metaContainer {
         display: flex;
@@ -17,5 +13,22 @@
         justify-content: space-between;
         flex-flow: row wrap;
     }
-  
+    .categoryContainer p {
+      color: #613F73;
+      border: 2px solid #613F73;
+      padding: 7px;
+      border-radius: 10px;
+      margin: 5px 10px 5px 0px;
+    }
+    .divider {
+      text-decoration: none;
+      font-size:2.8em;
+      color: #613F73;
+      font-family: Major-Mono-Display, monospace;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      width: 100%;
+    }
+
   
