--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,7 +6,7 @@
 
 html {
       -ms-text-size-adjust: 100%;
-      -webkit-text-size-adjust: 100%;
+      -web-kit-text-size-adjust: 100%;
       font-size: 25px;
 }
 body {	
@@ -82,4 +82,8 @@ ol {
   html {
     font-size: 100%;
   }
+}
+
+.ed {
+  display: flex; 
 }
