--- a/src/pages/recipe.module.scss
+++ b/src/pages/recipe.module.scss
@@ -8,8 +8,12 @@
     background: #e4e4e4;
     text-decoration: none;
     display: block;
-    padding: 2px 15px 15px 15px;
+    padding: 10px 15px 10px;
     }
+    
+  p {
+    margin-top: 5px;
+  }
   
   a:hover {
     background-color: #DFD4CC;
@@ -23,9 +27,9 @@
   .categoryContainer p {
     color: #000;
     background-color: #F49600;
-    padding: 7px;
+    padding: 8px;
     border-radius: 10px;
-    margin: 5px 10px 5px 0px;
+    margin: 10px 10px 5px 0px;
   }
 
 }
