--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,7 +7,7 @@
 html {
       -ms-text-size-adjust: 100%;
       -web-kit-text-size-adjust: 100%;
-      font-size: 25px;
+      font-size: 22px;
 }
 body {	
       -webkit-font-smoothing: antialiased;	
@@ -28,16 +28,21 @@ h1 {
     font-family: Tinue-Road, monospace;
     font-size: 2rem;
     color: #613F73;
+    margin: 0px;
+    padding: 0px;
 }
 h2 {
     font-family: Tinue-Road, monospace;
-    margin-bottom: 0;
+    margin: 0px;
+    padding: 0px;
     font-size: 1.5rem;
 }
 
 h3 {
     font-family: Anonymous-Pro, monospace;
     font-size: 1.3rem;
+    margin: 0px;
+    padding: 0px;
 }
 a:active,
 a:hover {
