--- a/src/templates/template.module.scss
+++ b/src/templates/template.module.scss
@@ -16,9 +16,10 @@
     .categoryContainer p {
       color: #613F73;
       border: 2px solid #613F73;
-      padding: 7px;
+      padding: 8px;
       border-radius: 10px;
-      margin: 5px 10px 5px 0px;
+      margin: 15px 10px 5px 0px;
+      font-size: 14px;
     }
     .divider {
       text-decoration: none;
