--- a/src/fonts/fonts.css
+++ b/src/fonts/fonts.css
@@ -1,30 +1,29 @@
 @font-face {
-    font-family: Anonymous-Pro;
-    font-weight: 400;
-    font-style: normal;
-    src:    url("./Anonymous-Pro.ttf") format("TrueType");
-  }
-  @font-face {
-    font-family: Anonymous-Pro-Bold;
-    font-weight: 700;
-    font-style: normal;
-    src:    url("./Anonymous-Pro-Bold.ttf") format("TrueType"),
-  }
+  font-family: Anonymous-Pro;
+  font-weight: 400;
+  font-style: normal;
+  src: url("./Anonymous-Pro.ttf") format("TrueType");
+}
+@font-face {
+  font-family: Anonymous-Pro-Bold;
+  font-weight: 700;
+  font-style: normal;
+  src: url("./Anonymous-Pro-Bold.ttf") format("TrueType");
+}
 
-  @font-face {
-    font-family: Anonymous-Pro-Italic;
-    font-weight: 700;
-    font-style: normal;
-    src:   url("./Anonymous-Pro-Italic.ttf") format("TrueType"),
-  }
+@font-face {
+  font-family: Anonymous-Pro-Italic;
+  font-weight: 700;
+  font-style: normal;
+  src: url("./Anonymous-Pro-Italic.ttf") format("TrueType");
+}
 
-  @font-face {
-    font-family: Major-Mono-Display;
-    src: url("./Major-Mono-Display.ttf") format("TrueType")
-  }
+@font-face {
+  font-family: Major-Mono-Display;
+  src: url("./Major-Mono-Display.ttf") format("TrueType");
+}
 
-  @font-face {
-    font-family: Tinue-Road;
-    src: url("./Tinue-Road.ttf") format("TrueType")
-  }
-
+@font-face {
+  font-family: Tinue-Road;
+  src: url("./Tinue-Road.ttf") format("TrueType");
+}
