--- a/src/pages/recipe.module.scss
+++ b/src/pages/recipe.module.scss
@@ -2,23 +2,23 @@
   list-style-type: none;
 }
 
-.recipe {  
+.recipe {
   a {
     border-radius: 10px;
     background: #e4e4e4;
     text-decoration: none;
     display: block;
     padding: 10px 15px 10px;
-    }
-    
+  }
+
   p {
     margin-top: 5px;
   }
-  
+
   a:hover {
-    background-color: #DFD4CC;
+    background-color: #dfd4cc;
   }
-  
+
   .categoryContainer {
     display: flex;
     align-items: flex-start;
@@ -26,11 +26,10 @@
   }
   .categoryContainer p {
     color: #000;
-    background-color: #F49600;
+    background-color: #f49600;
     padding: 8px;
     border-radius: 10px;
     margin: 10px 10px 5px 0px;
     font-size: 15px;
   }
-
 }
