--- a/src/templates/template.module.scss
+++ b/src/templates/template.module.scss
@@ -1,35 +1,30 @@
-
-
-    .categoryContainer {
-      display: flex;
-      flex-direction: row;
-      align-items: flex-start;
-      flex-wrap: wrap;
-      
-    }
-    .metaContainer {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        flex-flow: row wrap;
-    }
-    .categoryContainer p {
-      color: #613F73;
-      border: 2px solid #613F73;
-      padding: 8px;
-      border-radius: 10px;
-      margin: 15px 10px 5px 0px;
-      font-size: 15px;
-    }
-    .divider {
-      text-decoration: none;
-      font-size:2.8em;
-      color: #613F73;
-      font-family: Major-Mono-Display, monospace;
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-      width: 100%;
-    }
-
-  
+.categoryContainer {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  flex-wrap: wrap;
+}
+.metaContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex-flow: row wrap;
+}
+.categoryContainer p {
+  color: #613f73;
+  border: 2px solid #613f73;
+  padding: 8px;
+  border-radius: 10px;
+  margin: 15px 10px 5px 0px;
+  font-size: 15px;
+}
+.divider {
+  text-decoration: none;
+  font-size: 2.8em;
+  color: #613f73;
+  font-family: Major-Mono-Display, monospace;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+}
